change file structure, add footer

--- a/ready-html/index.html
+++ b/ready-html/index.html
@@ -4,23 +4,24 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../Css/Menu.css">
-	<link rel="stylesheet" href="../Css/3dscrool.css">
-	<link rel="stylesheet" href="Common.css">
-	<link rel="stylesheet" href="../Css/GoggleMap.css">
-	<link rel="stylesheet" href="../Css/MenuGlitch.css">
-	<script src="../JavaScript/3dscrool.js" defer></script>
-	<title>Шкипер карты</title>
+	<link rel="stylesheet" href="Css/common.css">
+	<link rel="stylesheet" href="Css/footer.css">
+	<link rel="stylesheet" href="Css/menu.css">
+	<link rel="stylesheet" href="Css/goggleMap.css">
+	<link rel="stylesheet" href="Css/menuGlitch.css">
+	<link rel="stylesheet" href="Css/3dscrool.css">
+	<script src="Js/3dscrool.js" defer></script>
+	<title>шкипер maps</title>
 </head>
 <body>
 	<header class="header">
 		<div id="wrapper">
-			<a href="" class="logo glitch" data-text="Шкипер карты">Шкипер карты</a>
+			<a href="" class="logo glitch" data-text="шкипер maps">шкипер maps</a>
 		</div>
 		<ul class="menu">
-			<li><a href="maps.html">Карты</a></li>
-			<li><a href="#recentlyPlaces.html">Недавние места</a></li>
-			<li><a href="404Page.html">Аккаунт</a></li>
+			<li><a href="maps.html">Карта</a></li>
+			<li><a href="404Page.html">Последние места</a></li>
+			<li><a href="404Page.html">Профиль</a></li>
 		</ul>
 	</header>
 	<main class="content">
@@ -28,13 +29,13 @@
 			<section class="gallery">
 				<div class="frame">
 					<div class="frame__content">
-						<h2>shkiper maps</h2>
+						<h2>шкипер карты</h2>
 					</div>
 				</div>
 	
 				<div class="frame">
 					<div class="frame__content">
-						<div class="frame-media frame-media_left" style="background-image: url(images/1.jpg)"></div>
+						<div class="frame-media frame-media_left" style="background-image: url(images/city-firstimage.jpg)"></div>
 					</div>
 				</div>
 	
@@ -48,14 +49,14 @@
 	
 				<div class="frame">
 					<div class="frame__content text-right">
-						<h3>shkiper Maps</h3>
-						<p>Это карты только для настоящих бурундуков</p>
+						<h3>О Нас</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur elit adipisicing. Nemo fugit, rerum dolorem assumenda consequatur dicta error iure laboriosam temporibus.</p>
 					</div>
 				</div>
 	
 				<div class="frame frame_bg">
 					<div class="frame__content">
-						<div class="frame-media frame-media_left" style="background-image: url(images/2.jpg)"></div>
+						<div class="frame-media frame-media_left" style="background-image: url(images/two-char.png)"></div>
 					</div>
 				</div>
 	
@@ -71,8 +72,8 @@
 	
 				<div class="frame">
 					<div class="frame__content text-left">
-						<h3>Все еще сомневаешься?</h3>
-						<p>Ты наш интерфейс вообще видел?</p>
+						<h3>Ask the Mountains</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur elit. Rerum dolorem assumenda consequatur dicta error iure laboriosam temporibus omnis quae eaque aliquam esse unde accusamus dolores non soluta.</p>
 					</div>
 				</div>
 	
@@ -105,9 +106,9 @@
 	
 				<div class="frame"></div>
 				<div class="frame"></div>
-	
+				
 				<div class="frame">
-					<div class="frame__content">© shkiper production</div>
+					<div class="frame__content" style="font-size: 40px;">© shkiper TeamZV</div>
 				</div>
 			</section>
 		</div>
@@ -115,8 +116,42 @@
 		<img class="soundbutton paused" src="images/sound.gif" alt="Alt">
 		<audio class="audio" src="media/ambient.mp3" loop></audio>
 	</main>
-	<footer>
+	<footer class="site-footer">
+		<div class="content">
+			<div class="about">
+				<h6>About</h6>
+				<p class="text-justify">Scanfcode.com 
+					<i>CODE WANTS TO BE SIMPLE </i> 
+					is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple.
+					 We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.
+					</p>
+			</div>
 
+			<div class="quick-links">
+				<h6>Quick Links</h6>
+				<ul class="footer-links">
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Contact Us</a></li>
+					<li><a href="#">Contribute</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Sitemap</a></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="bottom-content">
+					<p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+			 <a href="#">Scanfcode</a>.
+					</p>
+
+					<ul class="social-icons">
+						<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+						<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+						<li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+						<li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+					</ul>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
