--- a/ready-html/404Page.html
+++ b/ready-html/404Page.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="Common.css">
-	<link rel="stylesheet" href="../Css/404Page.css">
+	<link rel="stylesheet" href="Css/common.css">
+	<link rel="stylesheet" href="Css/404Page.css">
 	<title>Document</title>
 </head>
 <body>
