--- a/ready-html/maps.html
+++ b/ready-html/maps.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
       href="//fonts.googleapis.com/css?family=Raleway:300,400,700"
       rel="stylesheet"
@@ -14,6 +15,8 @@
       rel="stylesheet"
       type="text/css"
     />
+		<link rel="stylesheet" href="Css/sidePopup.css">
+		<script src="Js/sidePopup.js" defer></script>
   </head>
   <style>
     html {
@@ -288,6 +291,16 @@
           </div>
         </div>
       </button>
+			</div>
+			<div id="sticky-side">
+				<div class="contact-btn"> Click Here</div>
+				<div id="side-box">
+					<div class="side-header">Header
+						<i class="fa fa-times close-icon" aria-hidden="true"></i>
+					</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
     </div>
   </body>
 </html>
