--- a/ready-html/maps.html
+++ b/ready-html/maps.html
@@ -293,7 +293,7 @@
       </button>
 			</div>
 			<div id="sticky-side">
-				<div class="contact-btn"> Click Here</div>
+				<div class="contact-btn"> <p id="open-close-icon">&#60</p></div>
 				<div id="side-box">
 					<div class="side-header">Header
 						<i class="fa fa-times close-icon" aria-hidden="true"></i>
